playbooks/yaml/argocd-apps/calibre-web/patch-library-env.yaml
# playbooks/yaml/argocd-apps/calibre-web/patch-library-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: media
spec:
  template:
    spec:
      containers:
        - name: calibre-web
