playbooks/yaml/argocd-apps/calibre-web/service.yaml
# A LoadBalancer service exposing port 8083.
# Assigned a Metallb IP of 192.168.1.132.
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: media
  labels:
    app: calibre-web
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.132
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
  selector:
    app: calibre-web
